update workflow jobname & role

--- a/.github/workflows/close-prs-issues.yml
+++ b/.github/workflows/close-prs-issues.yml
@@ -6,10 +6,11 @@ on:
   workflow_dispatch:
 
 permissions:
+  issues: write
   pull-requests: write
 
 jobs:
-  close_prs:
+  close_prs_issues:
     runs-on: ubuntu-latest
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
