--- a/.github/workflows/close-prs-issues.yml
+++ b/.github/workflows/close-prs-issues.yml
@@ -18,11 +18,16 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Close stale PRs
+      - name: Merge and Close stale PRs
         run: |
-          gh pr list --json number --jq '.[].number' | while read pr; do
-            gh pr close $pr -c "Automatically closing stale PR."
+          prs=$(gh pr list --state open --json number --jq '.[].number')
+          for pr in $prs; do
+            gh pr merge $pr --merge -c "Automatically merge stale #$pr."
+            gh pr close $pr -c "Automatically close stale #$pr."
           done
+      - name: Push changes to main branch
+        run: |
+          git push origin main
       - name: Close stale Issues
         run: |
           gh issue list --state open --json number --jq '.[].number' | while read -r issue; do
