--- a/.github/workflows/close-prs-issues.yml
+++ b/.github/workflows/close-prs-issues.yml
@@ -22,8 +22,8 @@ jobs:
         run: |
           prs=$(gh pr list --state open --json number --jq '.[].number')
           for pr in $prs; do
-            gh pr merge $pr --merge -c "Automatically merge stale #$pr."
-            gh pr close $pr -c "Automatically close stale #$pr."
+            gh pr merge $pr --merge
+            gh pr close $pr --comment "Automatically close stale #$pr."
           done
       - name: Push changes to main branch
         run: |
