--- a/.github/workflows/close-prs-issues.yml
+++ b/.github/workflows/close-prs-issues.yml
@@ -23,8 +23,12 @@ jobs:
         run: |
           prs=$(gh pr list --state open --json number --jq '.[].number')
           for pr in $prs; do
-            gh pr merge $pr --merge
-            gh pr close $pr --comment "Automatically close stale #$pr."
+            if gh pr merge $pr --merge; then
+              echo "PR #$pr merged successfully."
+            else
+              echo "Failed to merge PR #$pr. Closing the PR."
+              gh pr close $pr --comment "Automatically closing stale PR #$pr due to merge failure."
+            fi
           done
       - name: Push changes to main branch
         run: |
