--- a/.github/workflows/close-prs.yml
+++ b/.github/workflows/close-prs.yml
@@ -1,18 +1,32 @@
-name: Close stale PRs
+name: Merge or Close stale PRs, ISSUEs
 
 on:
   schedule:
-    - cron: "0 1 20 * *"  # 매일 12:00 UTC에 실행
+    - cron: "0 0 * * 1-5" # Asia/Seoul(UTC+9) 월 화 수 목 금 오전 9시에 실행
+  workflow_dispatch:
+
+permissions:
+  contents: write
+  issues: write
+  pull-requests: write
 
 jobs:
-  close_prs:
+  close_prs_issues:
     runs-on: ubuntu-latest
+    env:
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
-      - name: Close stale PRs
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Merge and Close stale PRs
         run: |
-          prs=$(gh pr list --json number --jq '.[].number')
+          prs=$(gh pr list --state open --json number --jq '.[].number')
           for pr in $prs; do
-            gh pr close $pr -c "Automatically closing stale PR."
+            if gh pr merge $pr --merge; then
+              echo "PR #$pr merged successfully."
+            else
+              echo "Failed to merge PR #$pr. Closing the PR."
+              gh pr close $pr --comment "Automatically closing stale PR #$pr due to merge failure."
+            fi
           done
