--- a/.github/workflows/close-prs-issues.yml
+++ b/.github/workflows/close-prs-issues.yml
@@ -23,8 +23,11 @@ jobs:
         run: |
           prs=$(gh pr list --state open --json number --jq '.[].number')
           for pr in $prs; do
+            echo "Processing PR #$pr..."
             if gh pr merge $pr --merge; then
               echo "PR #$pr merged successfully."
+              echo "Waiting for 1 minute before processing the next PR..."
+              sleep 60 # 1분 대기
             else
               echo "Failed to merge PR #$pr. Closing the PR."
               gh pr close $pr --comment "Automatically closing stale PR #$pr due to merge failure."
